--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_first_fragment">FirstFragment</string>
+    <string name="title_activity_school_tab">SchoolTab</string>
+    <string name="title_activity_startviewpage">Startviewpage</string>
+    <string name="title_activity_home_page">HomePage</string>
+    <string name="title_activity_school_filter">SchoolFilter</string>
+    <string name="title_activity_wizard">WizardActivity</string>
 </resources>
